feat(#2002): Align adapter registration with other pipeline elements (#2008)
* feat(#2002): Align adapter registration with other pipeline elements

* Fix checkstyle

* style: remove trailing whitespace

---------

Co-authored-by: bossenti <bossenti@posteo.de>