@@ -17,15 +17,15 @@
  */
 package org.apache.streampipes.manager.endpoint;
 
+import org.apache.streampipes.manager.execution.ExtensionServiceExecutions;
 import org.apache.streampipes.manager.operations.Operations;
 import org.apache.streampipes.model.message.Message;
 import org.apache.streampipes.model.message.NotificationType;
 import org.apache.streampipes.model.message.Notifications;
 
-import org.apache.http.client.fluent.Request;
-
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 public class EndpointItemParser {
 
@@ -33,7 +33,7 @@ public class EndpointItemParser {
                                          String principalSid,
                                          boolean publicElement) {
     try {
-      url = URLDecoder.decode(url, "UTF-8");
+      url = URLDecoder.decode(url, StandardCharsets.UTF_8);
       String payload = parseURIContent(url);
       return Operations.verifyAndAddElement(payload, principalSid, publicElement);
     } catch (Exception e) {
@@ -44,9 +44,8 @@ public class EndpointItemParser {
   }
 
   private String parseURIContent(String url) throws IOException {
-    return Request
-        .Get(url)
-        .addHeader("Accept", "application/json")
+    return ExtensionServiceExecutions
+        .extServiceGetRequest(url)
         .execute()
         .returnContent()
         .asString();
